--- a/views/map.ejs
+++ b/views/map.ejs
@@ -32,6 +32,7 @@
                     <div class = "dropdown-content">
                         <a href = "/account/<%=userID._id%>" method="GET" id="account">Account</a>
                         <a href = "/settings/<%=userID._id%>" method="GET" id="settings">Settings</a>
+                        <a href = "/" method="GET" id="home">Home</a>
                         <a href = "/logout" method="POST" id="logout" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Log out</a>
                         
                         <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
