cleaned code up, fixed issue of liking and favouriting posts, and other small bug fixes

--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -112,7 +112,7 @@ html{
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
     left: 50%;
-    transform: translateX(-55%);
+    transform: translateX(-60%);
     top: 100%;
 }
 
@@ -516,6 +516,22 @@ html{
     margin-top:0.5em;
 }
 
+.main-container .comment-container .login-button{
+    margin-top: 1em;
+    border: none;
+    padding: 1em 2em 1em 2em;
+    border: 1px solid var(--outline);
+    border-radius: 1em;
+}
+
+.main-container .comment-container .login-button:hover {
+    box-shadow: 0 5px 5px 0 var(--loginHover);
+}
+
+.main-container .comment-container .login-button a {
+    text-decoration: none;
+    color: var(--textColour);
+}
 
 
 .main-container .file-form{
@@ -951,6 +967,42 @@ html{
     width: 100%;
 }
 
+.loader,
+.loader div {
+  box-sizing: border-box;
+}
+.loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loader div {
+  position: absolute;
+  top: 33.33333px;
+  width: 13.33333px;
+  height: 13.33333px;
+  border-radius: 50%;
+  background: var(--textColour);
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.loader div:nth-child(1) {
+  left: 8px;
+  animation: loader1 0.6s infinite;
+}
+.loader div:nth-child(2) {
+  left: 8px;
+  animation: loader2 0.6s infinite;
+}
+.loader div:nth-child(3) {
+  left: 32px;
+  animation: loader2 0.6s infinite;
+}
+.loader div:nth-child(4) {
+  left: 56px;
+  animation: loader3 0.6s infinite;
+}
+
 @media screen and (min-width: 786px) {
     .navbar {
         display: flex;
@@ -994,6 +1046,31 @@ html{
         height:45%;
     }
 }
+
+@keyframes loader1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes loader3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes loader2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
 
 @keyframes fade-down {
     from {
