--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,9 +57,8 @@
 
     <div class = "main-container">
         <div id = "post-container">
-            <div id="loader">
-            </div>
         </div>
+        <div class="loader"><div></div><div></div><div></div><div></div></div>
     </div>
 
     <!--mobile container-->
@@ -90,7 +89,6 @@
             </div>
         </ul> 
     </div>
-
     <script src="/javascript/script.js"></script>
     <script>
         var userID = '<%- JSON.stringify(userID) %>';
