started allowing for messages between users, still wip

--- a/src/stylesheet/mobile.css
+++ b/src/stylesheet/mobile.css
@@ -109,4 +109,8 @@
     .main-container .account-container .preview-container {
         height: 100%;
     }
+
+    .main-container .create-message-container .create-message {
+        width: 95%;
+    }
 }
