--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -47,11 +47,11 @@
 <div class = "sidenav">
     <!-- userID is not needed as page is not accessible by non logged in user -->
     <a href = "/"><i class="fa-solid fa-home"></i>Home</a>
-    <a href = "map" ><i class="fa-solid fa-map"></i>Explore</a>
-    <a href = "notify"><i class ="fa-solid fa-bell"></i>Notifications</a>
-    <a href = "messages"><i class="fa-solid fa-envelope"></i>Messages</a>
-    <a href = "favourites"><i class="fa-solid fa-star"></i>Favourites</a>
-    <a href="create"><i class="fa-solid fa-plus"></i>Create</a>
+    <a href = "/map" ><i class="fa-solid fa-map"></i>Explore</a>
+    <a href = "/notify"><i class ="fa-solid fa-bell"></i>Notifications</a>
+    <a href = "/messages"><i class="fa-solid fa-envelope"></i>Messages</a>
+    <a href = "/favourites"><i class="fa-solid fa-star"></i>Favourites</a>
+    <a href="/create"><i class="fa-solid fa-plus"></i>Create</a>
     </div>
 
     <div class = "main-container">
