--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -967,6 +967,317 @@ html{
     width: 100%;
 }
 
+.main-container .map-container {
+    width: 50%;
+    height: 80vh;
+    border: 1px solid var(--outline);
+    border-radius: 1em;
+    background-color: var(--postBackground);
+    display:flex;
+}
+
+.main-container .map-container .search-container {
+    position: absolute;
+    top: 6rem;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.main-container .map-container .search-container #search {
+    width: 25%;
+    height: 2em;
+    border-radius: 1em;
+    border: 1px solid var(--outline);
+    padding: 0.5em;
+    margin-right: 0.5em;
+}
+
+.main-container .map-container .search-container #search:focus {
+    outline: 1px solid var(--loginHover);
+}
+
+.main-container .map-container .search-container #search-button {
+    margin-left:0.5em;
+    border: none;
+    background-color: transparent;
+}
+
+.main-container .map-container .search-container #search-button:hover {
+    transform: scale(1.2);
+}
+
+.main-container .create-message-container {
+    display: flex;
+    width:100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.67);
+    border: 1px solid var(--outline);
+    justify-content: center;
+    align-content: center;
+
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: 1;
+}
+
+.main-container .create-message-container .create-message {
+    height: 50%;
+    border: 1px solid var(--outline);
+    border-radius: 1em;
+    background-color: var(--postBackground);
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+    padding: 0.5em;
+}
+
+.main-container .create-message-container .create-message textarea{
+    margin-top: 1em;
+    width: 100%;
+    height:50%;
+    border-radius: 1em;
+    border: 1px solid var(--outline);
+    resize: none;
+    padding:0.5em;
+}
+
+.main-container .create-message-container .create-message textarea:focus {
+    border: 1px solid var(--outline);
+    outline: none;
+}
+
+.main-container .create-message-container .create-message .user-search {
+    width:50%;
+    padding-top: 1em;
+}
+
+.main-container .create-message-container .create-message .user-search input {
+    width:100%;
+    height: 2em;
+    font-size: 1em;
+    background-color: transparent;
+    border:none;
+    border-bottom: 2px solid var(--outline);
+}
+
+.main-container .create-message-container .create-message .user-search input:focus {
+    border:none;
+    border-bottom: 2px solid var(--outline);
+    outline: none;
+}
+
+.main-container .create-message-container .create-message .user-dropdown {
+    height:10em;
+    width:25%;
+    margin-top: 0.5em;
+    position: absolute;
+}
+
+.main-container .create-message-container .create-message .user-dropdown .user {
+    height:3em;
+    width:100%;
+    background-color: var(--postBackground);
+    border: 1px solid var(--outline);
+    position: relative;
+}
+
+.main-container .create-message-container .create-message .user-dropdown .user button {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.main-container .create-message-container .create-message .user-dropdown .user button:hover {
+    background-color: var(--sidenavSelected);
+}
+
+.main-container .create-message-container .create-message .user-dropdown p {
+    margin-left: 0.5em;
+    width:fit-content;
+    font-size: 1em;
+    color: var(--textColour);
+}
+
+.main-container .create-message-container .create-message .user .image-container {
+    height: 3em;
+    width: 3em;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    padding: 0.2em;
+}
+
+.main-container .create-message-container .create-message .user .image-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    align-self: center;
+}
+
+.main-container .create-message-container .create-message  .create-message-buttons {
+    display:flex;
+    justify-content: center;
+}
+
+.main-container .create-message-container .create-message  .create-message-buttons button {
+    border:none;
+    padding: 1em 2em;
+    border-radius: 1em;
+    margin: 1em;
+    background-color: var(--sidenavBackground);
+    outline: 1px solid var(--outline);
+}
+
+.main-container .create-message-container .create-message  .create-message-buttons button:hover {
+    box-shadow: 0 5px 5px 0 var(--loginHover);
+    transform: scale(1.1);
+}
+
+.main-container .message-container {
+    width: 50%;
+    height: 80vh;
+    top: 6.5em;
+    position: absolute;
+    border: 1px solid var(--outline);
+    border-radius: 1em;
+    background-color: var(--postBackground);
+    display:flex;
+    flex-direction: column;
+}
+
+.main-container .message-container .message-header {
+    display: flex;
+    height: fit-content;
+    height: 30%;
+    flex-direction: column;
+    padding: 0.5em;
+}
+
+.main-container .message-container .message-header .message-title {
+    font-size: 1em;
+    display: flex;
+    color: var(--textColour);
+}
+
+.main-container .message-container .message-header .create-new {
+    display: flex;
+    flex-direction: row;    
+}
+
+.main-container .message-container .message-header .create-new button {
+    border: none;
+    background-color: transparent;
+    margin-right: 0.5em;
+    display:flex;
+    flex-direction: row;
+}
+
+.main-container .message-container .message-header .create-new p {
+    display: flex;
+    text-decoration: none;
+    color: var(--textColour);
+    font-size: 0.9em;
+    margin-left: 0.5em;
+}
+
+.main-container .message-container .message-dropdown-container {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    align-self: flex-end;
+    flex-direction: column;
+    border-top: 1px solid var(--outline);
+}
+
+.main-container .message-container .message-dropdown-container button {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown {
+    width: 75%;
+    height: 100%;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    flex-direction: column;
+    border: 1px solid var(--outline);
+    border-bottom: none;
+    border-top: none;
+    overflow-y: auto;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content {
+    width: 100%;
+    height:15%;
+    display: flex;
+    border-bottom: 1px solid var(--outline);
+    flex-direction: column;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content:hover {
+    background-color: var(--sidenavSelected);
+}
+
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user {
+   display: flex;
+   flex-direction: row;
+   height:fit-content;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .image-container {
+    font-size: 1.5em;
+    height: 100%;
+    margin-top: 0.25em;
+    color: var(--textColour);
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+    align-self: center;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .image-container img {
+    width: 1.25em;
+    height: 1.25em;
+    border-radius: 50%;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user p {
+    font-size: 1em;
+    display:flex;
+    align-items: center;
+    margin-left: 0.5em;
+    font-size: 0.9em;
+    color: var(--textColour);
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user .message-date {
+    margin-left: auto;
+    margin-right: 2%;
+    font-size: 0.7em;
+    align-self: center;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .recent-message {
+    padding: 0.5em;
+    padding-left: 1.5em;
+    color: var(--textColour);
+    font-size: 0.8em;
+    text-align: left;
+}
+
 .loader,
 .loader div {
   box-sizing: border-box;
@@ -1045,6 +1356,11 @@ html{
     .main-container .account-container .preview-container .image-container {
         height:45%;
     }
+
+    .main-container .create-message-container .create-message {
+        width: 50%;
+    }
+
 }
 
 @keyframes loader1 {
