--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,28 +18,32 @@
 
         <ul>
             <% if (!userID) { %>
-                <div class = "default-icon">
-                    <div class = "tooltip">
-                            <a href = "login" id="login"><i class="fa-solid fa-circle-user"></i></a>
-                        <span class = "tooltiptext">Login</span>
-                    </div>
+                <div class = "dropdown">
+                    <button>
+                        <div class = "tooltip">
+                            <div class = "icon">
+                                <a href = "login" id="login"><img src = "https://i.imgur.com/jNNT4LE.png" alt = ""></a>
+                            </div>
+                            <span class = "tooltiptext">Login</span>
+                        </div>
+                    </button>
                 </div>
             <% } else { %>
-                    <div class = "dropdown">
-                        <button class = "dropbtn">
-                            <div class = "icon">
-                                <img src = "<%=userID.photo%>" alt = "">
-                            </div>
-                        </button>
-                        <div class = "dropdown-content">
-                            <a href = "/account/<%=userID._id%>" method="GET" id="account">Account</a>
-                            <a href = "/settings/<%=userID._id%>" method="GET" id="settings">Settings</a>
-                            <a href = "/" method="GET" id="home">Home</a>
-                            <a href = "/logout" method="POST" id="logout" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Log out</a>
-                            
-                            <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
+                <div class = "dropdown">
+                    <button class = "dropbtn">
+                        <div class = "icon">
+                            <img src = "<%=userID.photo%>" alt = "">
                         </div>
+                    </button>
+                    <div class = "dropdown-content">
+                        <a href = "/account/<%=userID._id%>" method="GET" id="account">Account</a>
+                        <a href = "/settings/<%=userID._id%>" method="GET" id="settings">Settings</a>
+                        <a href = "/" method="GET" id="home">Home</a>
+                        <a href = "/logout" method="POST" id="logout" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Logout</a>
+                        
+                        <form id="logout-form" action="/logout" method="POST"></form>
                     </div>
+                </div>
             <% } %>
         </ul>
     </div>
